@@ -1,5 +1,5 @@
 DIST ibus-hangul-0.1.1.20080901.tar.gz 379501 RMD160 378b268b53e81c53c73b8c458547cd9ac69ebed3 SHA1 d7787aff01eff5696ec98b06d7cb8a32cff4b79f SHA256 23a9f9b2a61e26d427b1350cd7af175d4f2b99271cb56eaf393a6748df9a3744
-EBUILD ibus-hangul-0.1.1.20080901.ebuild 973 RMD160 121f400faadf699eca63c702fe8fd32c81857397 SHA1 99d808cdc549fa382402e645f9c7155e40dda4c7 SHA256 f3d9055250bb492a4fbd58e96807e7e6b61cdbb3841dec60fe99dd5262ac561a
-EBUILD ibus-hangul-9999.ebuild 1153 RMD160 ea207462e15db1473b758814c8f70f7afa0b2393 SHA1 ce36e88740b5cea29af1a163eb52e1bd6ae55a52 SHA256 617589612464586972ef1888ec62d13a2cd3a729a55907d683b34a7bbeb9aa32
-MISC ChangeLog 407 RMD160 39763abde7412e05309ff73ac87800897a5f3885 SHA1 4ea8262b1b38fbeb139c04dae4ba8cf47f8dab98 SHA256 b738408f9ef787d99ce5fe471b0cd06522b1ba85efde109efdc3db2f36cb7833
+EBUILD ibus-hangul-0.1.1.20080901.ebuild 992 RMD160 ac660780a97750bb70de951663fee8bf0d0e24d1 SHA1 417234c4be56988358330893020a726ce577be23 SHA256 1bfd9b6831ad79757601add651311835dab5442486abab2e934f38f668936427
+EBUILD ibus-hangul-9999.ebuild 1163 RMD160 8044a5816d842380e8340f683a5005d300ed3c43 SHA1 f8e497ca586a232e9213cf55081a8759ddd39e90 SHA256 63364fe50356ee82bccc9cf7ab9519ceb8c5d86ce8d0cf1cd8e949d0abd6df1b
+MISC ChangeLog 586 RMD160 81ad0f1bccdd9021a4b804d8f194d734adb6e4c8 SHA1 6fe2f0cae3d57b5262b1b9140fe44819f2bc5ae6 SHA256 51c799f2dd363b376e2dd70e783367d1b9b5c9e35c5ffe9fc580a38285b8a695
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
