@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  05 Sep 2008; Thomas Anderson <gentoofan23@gentoo.org>
+  ibus-hangul-0.1.1.20080901.ebuild, ibus-hangul-9999.ebuild:
+  Simplify dependencies, use NEED_PYTHON, don't need EAPI 1
+
   03 Sep 2008; Hong Hao <oahong@gmail.com> ibus-hangul-9999.ebuild:
   Fixed typos in RDEPEND
 
